Fix the hero image issue on mobile
Find an issue where the image almost hit the heading text. So, I add
more margin-top to the hero element and adjust the position of the hero
image.

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -77,11 +77,13 @@ body {
 .container {
   display: flex;
   margin: 0 auto;
-  background: url("../images/hero-mobile.webp") no-repeat top rem(74)
-  center/100%;
+  background: url("../images/hero-mobile.webp") no-repeat top rem(90)
+    center/100%;
   padding: rem(32);
-  max-width: rem(460);
-  overflow: hidden;@include breakpoint-up("tiny") {
+  max-width: rem(500);
+  overflow: hidden;
+
+  @include breakpoint-up("tiny") {
     position: relative;
     justify-content: flex-start;
     background: none;
